# ros2-node-manager

./: Dockerfile-node-manager-client  LICENSE  README.md
.github/workflows/: build.yml
cli/: package.xml  setup.cfg  setup.py
cli/src/api/: __init__.py
cli/src/command/: manager.py
cli/src/verb/: __init__.py  list.py  start.py  stop.py
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: ListNodes.srv  StartNode.srv  StopNode.srv
server/: Cargo.toml  package.xml
server/misc/: free-fleet-server.service  ros2-node-manager.target
server/src/: daemon.rs  main.rs  systemd.rs
