<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_node_manager_cli</name>
  <version>0.1.0</version>
  <description>
    CLI with which ROS2 nodes that are running on a robot can be started / stopped from anywhere
  </description>
  <author email="hussein.kabbout@hotmail.com">Hussein Kabbout</author>
  <maintainer email="hussein.kabbout@hotmail.com">Hussein Kabbout</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2cli</depend>

  <exec_depend>ros2_node_manager_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
