<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_node_manager_server</name>
  <version>0.1.0</version>
  <description>ROS2 node that provides a service with which you can stop nodes on the current machine via systemd unit files</description>
  <author email="kabbohus@students.zhaw.ch">Hussein Kabbout</author>
  <maintainer email="kabbohus@students.zhaw.ch">Hussein Kabbout</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>ros2_node_manager_interfaces</build_depend>
  <build_depend>rclrs</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>

  <exec_depend>ros2_node_manager_interfaces</exec_depend>
  <exec_depend>rclrs</exec_depend>
  <exec_depend>rosidl_runtime_rs</exec_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
